loopdowhile.Poucet2.scala.code
while(sortieTrouvee==false){
	do{
  	avance()
    var n:Int =0
  	if (estSurBiscuit){
    	n=n+1
    }
  } while (crossing()==false) 
  if (n<3){
    droite()
  }
  else{
    gauche()
  }  
}
